# random-python

./: .gitattributes  .gitignore  README.md
codecademy/: README.md
codecademy/abruptly_goblins/: Abruptly Goblins Planner.ipynb
codecademy/coded_communication/: coded_correspondence.ipynb  coded_correspondence_solutions.ipynb
codecademy/customer_service_bot/: customer_service_bot.ipynb
codecademy/linear_regression/: Reggie_Linear_Regression_Skeleton.ipynb  Reggie_Linear_Regression_Solution.ipynb
codecademy/scrabble/: scrabble.py
csv_processor/: README.md  asc_to_csv.py
csv_processor/in/sample_run/: 2019_02_15_ABC_2_XY_Heizung_sek.ASC  ignored_file.txt  (+16 more)
flac-collection_to_mobile/: README.md  flac-collection_to_mobile.py
homelab/: .gitignore  README.md  pyproject.toml
homelab/control/: __main__.py
homelab/control/docker/: __init__.py  compose.py
homelab/control/util/: __main__.py  files.py  ipinfo-api-token  log.py  misc.py  procs.py  time.py
homelab/control/util/templates/: homelab.service.j2  homelab_backup.service.j2  homelab_backup.timer.j2
html_logging_scraper/: __main__.py
joblookup/: README.md  joblookup.py
kill_orphans/: kill_orphans.py
mailsender/: .gitignore  README.md  __main__.py  email_config.json
monopoly/: README.md  monopoly.py  playground.py
music-converter/: Dockerfile  README.md  requirements.txt
music-converter/music-converter/: __main__.py
other/: fibonacci.py
photolib/: README.md
photolib/photolib/: tools.py
psychrometric-chart/: .gitlab-ci.yml  README.md  pyproject.toml
psychrometric-chart/psychrometric_chart/: main.py  physical_units.py
psychrometric-chart/tests/: test_psychrometric_chart.py
reddit/: README.md  pyproject.toml
reddit/reddit/: __main__.py
special_character_replacer/: .gitignore  README.md  __main__.py  pyproject.toml
special_character_replacer/special_character_replacer/: main.py
special_character_replacer/tests/: __main__.py  test_functions.py
specialsreplacer/: README.md  pyproject.toml  setup.py
specialsreplacer/tests/: test_functions.py
wow/: test_charnames.py
(+1 files in other folders)
