[tool.poetry]
name = "psychrometric-chart"
version = "0.1.0"
description = ""
authors = ["Alex Povel <alex.povel@tuhh.de>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.2"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
pint = "^0.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.8.1"

[tool.poetry.scripts]
tests = "tests.test_psychrometric_chart:run_tests"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
