[tool.poetry]
name = "reddit"
version = "0.1.0"
description = "Interact with reddit API"
authors = ["Alex Povel <git@alexpovel.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
praw = "^7.1.3"
essential-generators = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
