[tool.poetry]
name = "special_character_replacer"
version = "0.1.0"
description = "Tool to replace text written using alternative spellings of special characters (e.g. German umlauts [ä, ö, ü] etc. [ß]), perhaps no proper keyboard layout was used, with text with the correct special characters in place."
authors = ["Alex Povel"]

[tool.poetry.dependencies]
python = "^3.8"
pyperclip = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
